[tool.poetry]
name = "sls-api"
version = "1.0.0"
description = "FastAPI for the SousLeSens project"
authors = ["Logilab"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-multipart = "^0.0.6"
python-ulid = "^2.2.0"
rdflib = "^7.0.0"
requests = "^2.31.0"
colorlog = "^6.7.0"
sparqlwrapper = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
